--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="light-mode">
+  <button id="toggle-mode" class="mode-toggle">🌙 다크모드</button>
+
   <div id="main" class="screen">
     <h1>Orange English Timer</h1>
     <div class="button-container">
@@ -21,7 +23,6 @@
     </div>
   </div>
 
-  <!-- 공지사항 화면 -->
   <div id="notice" class="screen hidden">
     <button class="back-btn" onclick="goBack()">←</button>
     <h2>공지사항</h2>
@@ -36,7 +37,6 @@
 3. <b>신규 학생</b>은 단어 시험 OMR 윗부분에 <b>신규</b>라고 적고, <b>이름, 학교</b>만 기입 후 시험지에 <b>아는 단어만 체크</b>해 주세요. <b>신규는 재시험 없으니 편하게</b> 보세요.</div>
   </div>
 
-  <!-- 독해 테스트 화면 -->
   <div id="reading-test" class="screen hidden">
     <button class="back-btn" onclick="goBack()">←</button>
     <h2>독해 테스트</h2>
@@ -48,7 +48,6 @@
     <button onclick="startCustomTimer()">시작</button>
   </div>
 
-  <!-- 타이머 화면 -->
   <div id="timer-screen" class="screen hidden">
     <button class="back-btn" onclick="goBack()">←</button>
     <h2 id="timer-title"></h2>
@@ -56,6 +55,10 @@
     <div id="timer-end" class="timer-end hidden">끝났습니다.</div>
     <div class="notice-content centered-text" id="timer-subtext"></div>
   </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
   <script src="script.js"></script>
 </body>
